--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -24,32 +24,31 @@
 
 
     <TextView
+        android:id="@+id/update_text"
         style="@style/Headline"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
-        android:id="@+id/update_text"
+        android:text="@string/updating_data"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logo"
-        android:text="@string/updating_data"
-        android:visibility="gone"
-        tools:visibility="visible" />
+        app:layout_constraintTop_toBottomOf="@id/logo" />
 
     <com.google.android.material.progressindicator.ProgressIndicator
         android:id="@+id/update_indicator"
-        app:layout_constraintTop_toBottomOf="@id/update_text"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="64dp"
+        android:layout_height="64dp"
         android:layout_marginTop="32dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        tools:visibility="visible" />
+        style="@style/Widget.MaterialComponents.ProgressIndicator.Circular.Indeterminate"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/update_text" />
 
     <androidx.constraintlayout.widget.Group
         android:id="@+id/update_group"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        tools:visibility="visible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
