--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -12,4 +12,8 @@
         android:icon="@drawable/ic_hazard_simple"
         android:id="@+id/hazard_fragment"
         android:title="@string/fragment_hazards" />
+    <item
+        android:icon="@drawable/ic_chest_adaptive"
+        android:id="@+id/treasure_fragment"
+        android:title="@string/fragment_treasures" />
 </menu>
