--- a/app/src/main/res/layout/fragment_treasure.xml
+++ b/app/src/main/res/layout/fragment_treasure.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -15,136 +15,41 @@
         android:paddingTop="8dp"
         android:paddingBottom="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:itemCount="5"
+        tools:itemCount="20"
         tools:listitem="@layout/viewholder_monster" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/filter_bottom_sheet"
-        style="@style/BottomSheet"
+        style="@style/FilterControl"
+        android:padding="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+        app:layout_constraintBottom_toBottomOf="parent">
 
-        <View
-            android:layout_width="54dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="4dp"
-            android:background="@color/secondaryColor"
-            app:layout_constraintEnd_toEndOf="parent"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/search_button"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/search_edit_text_layout"
-            style="@style/EditText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:layout_constraintEnd_toStartOf="@+id/create_monster"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/search_edit_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/monster_search" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <ImageView
-            android:id="@+id/create_monster"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:background="?selectableItemBackgroundBorderless"
-            android:clickable="true"
-            android:contentDescription="@string/custom_monster_create_title"
-            android:focusable="true"
-            android:padding="8dp"
-            android:src="@drawable/ic_add"
-            app:layout_constraintBottom_toBottomOf="@id/search_edit_text_layout"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/search_edit_text_layout" />
+            app:icon="@drawable/ic_search"
+            android:text="Search"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
-        <TextView
-            android:id="@+id/level_slider_label"
-            style="@style/Caption"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/level_button"
+            app:layout_constraintStart_toEndOf="@id/search_button"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:text="@string/monster_level_range"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/search_edit_text_layout" />
-
-        <io.apptik.widget.MultiSlider
-            android:id="@+id/level_slider"
-            android:layout_width="0dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="16dp"
-            android:clickable="true"
-            android:focusable="true"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/level_slider_label"
-            app:scaleMax="25"
-            app:scaleMin="-1"
-            app:scaleStep="1"
-            app:thumbNumber="2" />
-
-
-        <TextView
-            android:id="@+id/type_filter_label"
-            style="@style/Caption"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/label_filter_monster_types"
-            app:layout_constraintStart_toStartOf="@id/level_slider_label"
-            app:layout_constraintTop_toBottomOf="@id/level_slider" />
-
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/monster_type_chips"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:chipSpacingVertical="@dimen/verticalChipSpacing"
-            app:layout_constraintTop_toBottomOf="@id/type_filter_label">
-
-        </com.google.android.material.chip.ChipGroup>
-
-        <TextView
-            android:id="@+id/sort_by_label"
-            style="@style/Caption"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:text="@string/monster_sort_by"
-            app:layout_constraintStart_toStartOf="@id/level_slider_label"
-            app:layout_constraintTop_toBottomOf="@id/monster_type_chips" />
-
-
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/sort_by_chips"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            app:chipSpacingVertical="@dimen/verticalChipSpacing"
-            app:layout_constraintTop_toBottomOf="@id/sort_by_label">
-
-        </com.google.android.material.chip.ChipGroup>
+            android:text="0-25"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
