--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -51,6 +51,14 @@
         <item name="android:outlineProvider">paddedBounds</item>
     </style>
 
+    <style name="FilterControl">
+        <item name="android:background">?colorSurface</item>
+        <item name="android:elevation">16dp</item>
+        <item name="android:focusable">true</item>
+        <item name="android:clickable">true</item>
+        <item name="android:outlineProvider">paddedBounds</item>
+    </style>
+
     <style name="EditText" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"></style>
 
     <style name="DropDown" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"></style>
