--- a/app/src/main/res/layout/bottomsheet_level.xml
+++ b/app/src/main/res/layout/bottomsheet_level.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="@string/monster_level_range"
+        android:text="@string/level_range"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
