--- a/app/src/main/res/layout/bottomsheet_search.xml
+++ b/app/src/main/res/layout/bottomsheet_search.xml
@@ -23,7 +23,7 @@
             android:id="@+id/search_edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="@string/monster_search" />
+            android:hint="@string/search" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
