--- a/app/src/main/res/layout/fragment_treasure.xml
+++ b/app/src/main/res/layout/fragment_treasure.xml
@@ -16,38 +16,83 @@
         android:paddingBottom="8dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="20"
-        tools:listitem="@layout/viewholder_monster" />
+        tools:listitem="@layout/viewholder_treasure" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_filter_alt"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="16dp"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toTopOf="@+id/filter_bottom_sheet"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/filter_bottom_sheet"
         style="@style/FilterControl"
-        android:padding="4dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/search_button"
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/option_chips"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            app:chipSpacingVertical="@dimen/verticalChipSpacing"
+            app:layout_constraintEnd_toStartOf="@id/more_options"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:icon="@drawable/ic_search"
-            android:text="Search"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
+            app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/level_button"
-            app:layout_constraintStart_toEndOf="@id/search_button"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="4dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            <de.enduni.monsterlair.common.view.filterchips.SearchChip
+                android:id="@+id/search_button"
+                style="@style/Widget.MaterialComponents.Chip.Action"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <de.enduni.monsterlair.common.view.filterchips.LevelRangeChip
+                android:id="@+id/level_button"
+                style="@style/Widget.MaterialComponents.Chip.Action"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <de.enduni.monsterlair.common.view.filterchips.SortByChip
+                android:id="@+id/sort_button"
+                style="@style/Widget.MaterialComponents.Chip.Action"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+        </com.google.android.material.chip.ChipGroup>
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/more_options"
             android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="?selectableItemBackgroundBorderless"
+            android:padding="8dp"
+            android:src="@drawable/ic_more_vert"
+            app:layout_constraintBottom_toBottomOf="@id/option_chips"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/option_chips" />
+
+        <com.google.android.material.chip.ChipGroup
+            android:id="@+id/filter_chips"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="0-25"
-            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            app:chipSpacingVertical="@dimen/verticalChipSpacing"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/option_chips" />
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
