--- a/app/src/main/res/layout/fragment_treasure.xml
+++ b/app/src/main/res/layout/fragment_treasure.xml
@@ -19,13 +19,13 @@
         tools:listitem="@layout/viewholder_treasure" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/filter_fab"
         style="@style/Widget.MaterialComponents.ExtendedFloatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_filter_alt"
-        android:layout_marginBottom="8dp"
         android:layout_marginEnd="16dp"
-        app:fabSize="mini"
+        android:layout_marginBottom="8dp"
+        android:src="@drawable/ic_filter_alt"
         app:layout_constraintBottom_toTopOf="@+id/filter_bottom_sheet"
         app:layout_constraintEnd_toEndOf="parent" />
 
@@ -81,17 +81,23 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="@id/option_chips" />
 
-        <com.google.android.material.chip.ChipGroup
-            android:id="@+id/filter_chips"
-            android:layout_width="0dp"
+        <HorizontalScrollView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            app:chipSpacingVertical="@dimen/verticalChipSpacing"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/option_chips" />
+            android:scrollbars="none"
+            android:paddingTop="8dp"
+            android:paddingBottom="8dp"
+            app:layout_constraintTop_toBottomOf="@id/option_chips">
+
+            <com.google.android.material.chip.ChipGroup
+                android:id="@+id/additional_filter_chips"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                app:singleLine="true" />
+
+        </HorizontalScrollView>
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
