Somewhat workable dropdowns

--- a/app/src/main/res/layout/fragment_treasure.xml
+++ b/app/src/main/res/layout/fragment_treasure.xml
@@ -8,8 +8,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/treasure_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginBottom="@dimen/bottom_sheet_peek"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/filter_bottom_sheet"
         android:clipToPadding="false"
         android:orientation="vertical"
         android:paddingTop="8dp"
